** Modified css class tabLabelsContainer to have relative position and higher z-index ** Added new css class fixedSizedTabContent for absolute positioned tab contents ** Resized reports iframe height to 100% ** Added new css rule to #viewReportViewerContainer

--- a/Pyramus/WebContent/css/theme.css
+++ b/Pyramus/WebContent/css/theme.css
@@ -1021,6 +1021,14 @@ h1.genericPageHeader{
   margin-bottom: 4px;
 }
 
+#viewReportViewerContainer{
+  position:absolute;
+  top:50px;
+  left:10px;
+  right:5px;
+  bottom:5px;
+}
+
 /* Generic search definitions */
 
 .searchResultsMessageContainer{
